<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020. Made by Vivek Surya and Raj Rathod. All Rights Reserved.
  ~ Last Modified 15/11/20 12:39 PM
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet"
    tools:context=".Fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_login_title"
            android:textColor="@android:color/black"
            android:layout_marginTop="35dp"
            android:textSize="45sp"
            android:textStyle="bold" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            >
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/frag_login_email"
                    android:layout_marginBottom="20dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_email_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout"
                android:layout_below="@+id/text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/frag_login_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_submit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:textSize="20sp"
                    android:text="@string/login_button"
                    android:layout_below="@+id/input_layout"/>
            <TextView
                android:id="@+id/login_forget_password"
                android:layout_below="@+id/login_submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:text="@string/frag_login_forgot_pass"
                />

        </RelativeLayout>


    </LinearLayout>
</FrameLayout>