<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020. Made by Vivek Surya and Raj Rathod. All Rights Reserved.
  ~ Last Modified 15/11/20 12:39 PM
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/edit_profile_layout"
    tools:context=".Activites.EditProfile">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <Button
            android:id="@+id/edit_profile_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:layout_gravity="start"
            android:textColor="#FFFFFF"
            android:text="@string/cancel"
            />
        <Button
            android:id="@+id/edit_profile_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:layout_gravity="end"
            android:textColor="#FFFFFF"
            android:text="@string/save"
            />
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/edit_profile_imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="15dp"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/user"
            app:civ_border_width="2dp"
            app:civ_border_color="#FFFF"/>

        <TextView
            android:id="@+id/edit_profile_changeProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_profile_imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="17dp"
            android:text="@string/change_profile_picture"
            android:textSize="13sp"/>

        <RelativeLayout
            android:layout_below="@+id/edit_profile_changeProfile"
            android:background="@color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_edit_profile_name"
                android:layout_marginBottom="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_profile_name_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_mobile_no"
                android:layout_below="@+id/edit_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_edit_profile_mobile_no"
                android:layout_marginBottom="20dp"
                android:visibility="gone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_profile_mobile_no_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_location"
                android:layout_below="@+id/edit_profile_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_edit_profile_location"
                android:layout_marginBottom="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_profile_location_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/edit_profile_location"
                android:text="@string/activity_edit_profile_helper"
                />
            </RelativeLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>