<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020. Made by Vivek Surya and Raj Rathod. All Rights Reserved.
  ~ Last Modified 15/11/20 12:39 PM
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="-5dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/account_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="60dp"
                android:text="@string/frag_account_name"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/account_profilePic"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_alignEnd="@+id/account_name"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="18dp"
                android:src="@drawable/user"
                app:civ_border_color="#FFFF"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/account_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account_name"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/frag_account_email"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/account_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account_email"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"

                android:text="@string/frag_account_mobile"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <RelativeLayout
        android:layout_below="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView">
        <Button
            android:id="@+id/account_editProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:gravity="center|start"
            android:textSize="20sp"
            android:drawableEnd="@drawable/arrow"
            android:paddingEnd="15dp"
            android:textColor="@android:color/black"
            android:text="@string/account_edit_profile"
            android:background="#007ACBF3"
            android:paddingStart="25dp" />

        <Button
            android:id="@+id/account_quiz_taken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/account_editProfile"
            android:layout_marginTop="2dp"
            android:textColor="@android:color/black"
            android:background="#007ACBF3"
            android:drawableEnd="@drawable/arrow"
            android:gravity="center|left"
            android:paddingStart="25dp"
            android:paddingEnd="15dp"
            android:text="@string/account_quiz_taken"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/account_quiz_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/account_quiz_taken"
            android:layout_marginTop="-1dp"
            android:textColor="@android:color/black"
            android:background="#007ACBF3"
            android:drawableEnd="@drawable/arrow"
            android:gravity="center|left"
            android:paddingStart="25dp"
            android:paddingEnd="15dp"
            android:text="@string/account_quiz_history"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/account_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/account_quiz_history"
            android:layout_marginTop="-1dp"
            android:textColor="@android:color/black"
            android:background="#007ACBF3"
            android:gravity="center|start"
            android:paddingStart="25dp"
            android:text="@string/account_logout"
            android:textAllCaps="false"
            android:textSize="20sp" />
    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3805686103431053/5953135885">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>